--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/library?serverTimezone=CTT&characterEncoding=UTF-8
+    url: jdbc:mysql://localhost:3307/library?serverTimezone=PRC&characterEncoding=utf8
     username: root
-    password: weikaixuan
+    password: admin
     driver-class-name: com.mysql.cj.jdbc.Driver
     max-active: 200
     max-idle: 20
