--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,16 +1,7 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3307/library?serverTimezone=PRC&characterEncoding=utf8
-    username: root
-    password: admin
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    max-active: 200
-    max-idle: 20
-    min-idle: 10
-    thymeleaf:
-      cache: false
-    jackson:
-      time-zone: GMT+8
+    url: jdbc:sqlite:./resources/Library.sqlite
+    driver-class-name: org.sqlite.JDBC
 
 mybatis:
   mapper-locations: classpath:dataImpl/*/*Mapper.xml
