--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,9 @@
 spring:
   datasource:
-    url: jdbc:sqlite:./resources/Library.sqlite
+    url: jdbc:sqlite:./resources/library.sqlite
     driver-class-name: org.sqlite.JDBC
 
 mybatis:
   mapper-locations: classpath:dataImpl/*/*Mapper.xml
   configuration:
     map-underscore-to-camel-case: true
-server:
-  max-http-header-size: 102400
